--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <div id="example"></div>
-<script src="./src/index.js"></script>
+<script src="src/index.js"></script>
 </body>
 </html>
