--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>React starter app</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-</head>
-<body>
-<div id="example"></div>
-<script src="src/index.js"></script>
-</body>
+  </head>
+  <h1>
+    Hello
+  </h1>
+  <body>
+    <div id="example"></div>
+  </body>
+  <script src="src/app.js"></script>
+  <script src="src/index.js"></script>
 </html>
